--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -31,8 +31,13 @@
   }
 
   #note-dashboard {
-    font-size: 10px;
+    font-size: 12px;
     color: red;
+  }
+
+  #note-dashboard-black{
+    font-size: 12px;
+    color: black;
   }
 
   #note-dashboard-pending {
@@ -55,4 +60,6 @@
 
   #container-dashboard {
     margin-top: 50px;
+    min-height: 100vh !important;
+    height: 100vh !important;
   }
