--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="form-search">
   <%= simple_form_for(@item) do |f| %>
     <div class="form-inputs">
       <%= f.input :name %>
